--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 h1, h2 {
-  padding-top: 90px;
+  padding-top: 40px;
   font-size: 40px;
 }
 
@@ -21,18 +21,18 @@ h1, h2 {
 
 .image {
   max-width: 60%;
-  padding: 30px;
+  padding: 20px;
 }
 
 p, ul {
-  padding: 100px;
+  padding: 50px;
 }
 
 
 li {
   color: blue;
   font-weight: bold;
-  padding-top: 20px;
+  padding-top: 30px;
   font-size: 26px;
 }
 
@@ -44,4 +44,14 @@ a {
   background-color: red;
   font-size: 26px;
   color: white;
+}
+
+#logo1, #logo2 {
+  padding: 10px;
+}
+
+@media (min-width: 600px) {
+  .image {
+    max-width: 20%;
+  }
 }
